# rgbd_viewer

./: CMakeLists.txt  README.md
icons/: rgbd_viewer.rc
src/: main.cpp  surfacegeometry.cpp  surfacegeometry.h
src/qml/: CustomButton.qml  CustomDialog.qml  ImageDialog.qml  Main.qml  Viewer.qml
